--- a/src/StartMenuForm.form
+++ b/src/StartMenuForm.form
@@ -7,6 +7,7 @@
     </constraints>
     <properties>
       <minimumSize width="500" height="300"/>
+      <preferredSize width="300" height="100"/>
     </properties>
     <border type="none"/>
     <children>
@@ -28,12 +29,12 @@
       </component>
       <component id="1f56b" class="javax.swing.JTextField" binding="textField">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
-          <font size="16"/>
+          <font size="32"/>
           <text value="Choose what u want"/>
         </properties>
       </component>
