--- a/src/ExitDialogForm.form
+++ b/src/ExitDialogForm.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <visible value="true"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="9c720" class="javax.swing.JButton" binding="closeButton">
